--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,12 @@ readme = "README.md"
 license = "Apache-2.0"
 
 dependencies = [
-    # https://pypi.org/project/pylodstorage/
-    "pylodstorage>=0.13.2",
+	# https://pypi.org/project/pybasemkit/
+	# https://github.com/WolfgangFahl/pybasemkit
+	# Python base module kit: YAML/JSON I/O, structured logging, CLI tooling, shell execution, and remote pydevd debug support.
+	"pybasemkit>=0.0.3",
+	# https://pypi.org/project/pylodstorage/
+	"pylodstorage>=0.16.4",
 ]
 requires-python = ">=3.10"
 
